Abstracted auth providers to config.json

--- a/app/config.json
+++ b/app/config.json
@@ -7,5 +7,11 @@
       "simple": {
          "firebase-simple-login": "~1.0.2"
       }
-   }
+   },
+   "simple-login-providers": [
+      {"name": "Facebook",       "value": "facebook", "checked": true},
+      {"name": "Twitter",        "value": "twitter"},
+      {"name": "Email/Password", "value": "password"},
+      {"name": "Persona",        "value": "persona"}
+   ]
 }
